Bug fix: Search bar from side nav no longer sticks out into page on mobile

--- a/themes/danielfox-theme/sass/_navigation.scss
+++ b/themes/danielfox-theme/sass/_navigation.scss
@@ -184,6 +184,13 @@ a {
 					}
 				}
 			}
+
+			
+				fieldset {
+					border: 0;
+					margin: 0 auto;
+					padding: 0;
+				}
 			.nav-side.nav-open {
 				margin-left: 0;
 				box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
@@ -193,11 +200,6 @@ a {
 					margin-left: 0;
 					margin-bottom: 2rem;
 				}
-				fieldset {
-					border: 0;
-					margin: 0 auto;
-					padding: 0;
-				}
 				.search-field {
 					margin: 0;
 					border: 0.5px solid $color__accent;
@@ -206,7 +208,7 @@ a {
 				}
 				.fieldset {
 					border: 0;
-					margin: 0;
+					margin-right: 0;
 				}
 				.search-submit {
 					@include subscribe-btn;
