--- a/themes/danielfox-theme/style.css
+++ b/themes/danielfox-theme/style.css
@@ -572,6 +572,10 @@ a {
           font-size: 22px;
           margin-bottom: 12px;
           letter-spacing: 0px; }
+    .site-header .header-nav-bar .burger-nav fieldset {
+      border: 0;
+      margin: 0 auto;
+      padding: 0; }
     .site-header .header-nav-bar .burger-nav .nav-side.nav-open {
       margin-left: 0;
       box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1); }
@@ -580,10 +584,6 @@ a {
         border: 0;
         margin-left: 0;
         margin-bottom: 2rem; }
-      .site-header .header-nav-bar .burger-nav .nav-side.nav-open fieldset {
-        border: 0;
-        margin: 0 auto;
-        padding: 0; }
       .site-header .header-nav-bar .burger-nav .nav-side.nav-open .search-field {
         margin: 0;
         border: 0.5px solid #dc4e3c;
@@ -591,7 +591,7 @@ a {
         width: 87%; }
       .site-header .header-nav-bar .burger-nav .nav-side.nav-open .fieldset {
         border: 0;
-        margin: 0; }
+        margin-right: 0; }
       .site-header .header-nav-bar .burger-nav .nav-side.nav-open .search-submit {
         box-sizing: border-box;
         padding: 15px 0px;
